# kryslib

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/kryslib/colors/: color.py  wal_colors.py
src/kryslib/qtile_widgets/: task_widget.py
src/kryslib/tests/: conftest.py
src/kryslib/tests/fixtures/: general.py  wal_fixtures.py
src/kryslib/tests/unit/: test_colors.py  test_wal_colors.py
