[project]
name = "kryslib"
description = ""
authors = [
  {'name'='Chad Provencher', 'email'='kryses@kryses.com'}
]
version = ""
dependancies = []
classifiers = []
readme = "README.md"

[tool.pyright]
include = [
  'src/**/*.py',
]
extraPaths = []


exclude = ["**/node_modules",
        "**/__pycache__",
]
ignore = []
stubPath = ""
venvPath = "./"
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
pythonpath = [
  "src",
] 
markers = [
  "unit",
  "integration",
  "regression",
  "performance",
  "acceptance",
  "functional",
]
addopts = "-ra -q -s"
