[project]
name = "kryslib"
description = ""
authors = [
  {'name'='Chad Provencher', 'email'='kryses@kryses.com'}
]
version = "0.1.0"
dependencies = [
        "asttokens==2.4.1",
        "colorama==0.4.6",
        "executing==2.0.1",
        "icecream==2.1.3",
        "iniconfig==2.0.0",
        "packaging==23.2",
        "pluggy==1.3.0",
        "Pygments==2.17.2",
        "pytest==7.4.3",
        "six==1.16.0",
]
classifiers = []
readme = "README.md"

[tool.pyright]
include = [
  'src/**/*.py',
]
extraPaths = []


exclude = ["**/node_modules",
        "**/__pycache__",
]
ignore = []
stubPath = ""
venvPath = "./"
venv = ".venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
pythonpath = [
  "src",
] 
markers = [
  "unit",
  "integration",
  "regression",
  "performance",
  "acceptance",
  "functional",
]
addopts = "-ra -q -s"

[debugpy]
srcPaths = ['src']

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
python_executable = "./.venv/bin/python"
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]


